@@ -4,8 +4,12 @@ Changelog
 1.1 (Unreleased)
 ------------------
 
-- Added Afrikaans translations 
+- Added Afrikaans translations
   [jcbrand]
+
+- Fixed test failure for the default user portrait, which changed from
+  defaultUser.gif to defaultUser.png in Products.PlonePAS 4.0.5.
+  [maurits]
 
 1.0 (2011-02-07)
 ----------------
